Add BearerAuth security definitions to User endpoints in Swagger and controller documentation
