# docs/swagger.json
@@ -184,6 +184,11 @@
         },
         "/user": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a paginated list of User records. Use ?page=1\u0026per_page=15 to control pagination.",
                 "produces": [
                     "application/json"
@@ -222,6 +227,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new User record",
                 "consumes": [
                     "application/json"
@@ -268,6 +278,11 @@
         },
         "/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get a single User record by ID",
                 "produces": [
                     "application/json"
@@ -313,6 +328,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update an existing User record by ID",
                 "consumes": [
                     "application/json"
@@ -370,6 +390,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete an existing User record by ID",
                 "tags": [
                     "User"
